kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: My-Application19-06-2026
spec:
  replicas: 3  # Number of pod replicas
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user-app
          image: binod0506/kubernetes-ci-cd-pipelinev2:e672c737b7d3b7a3930f4ec4ba250eb65223482c
          ports:
            - containerPort: 8081
